--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
 
 
 <body>
-<div id="wrapper">
+<div id="wrapper" class="wrapper">
 
-<div id="universalMenu">
+<div id="universalMenu" class="universalMenu">
 <h2>フィードタイプ</h2>
 <ul id="feed">
 <li id="feedFree">トップ無料</li>
@@ -59,8 +59,8 @@
 <li id="displayNum300">300</li>
 </ul>
 
-<h2>カテゴリ [NEW]</h2>
-<select name="select" id="genreChanger">
+<h2>カテゴリ</h2>
+<select name="select" id="genreChanger" class="genreChanger">
 <option value="">すべて</option>
 <option value="6022">カタログ</option>
 <option value="6016">エンターテイメント</option>
@@ -88,7 +88,7 @@
 
 </select>
 
-<div id="Uad">
+<div class="Uad">
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-4410803951131804";
 /* apprank-half */
@@ -105,12 +105,12 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <!-- //universalMenu --></div>
 
-<div id="contents">
+<div class="contents">
 <header>
 <h1><img src="img/header_logo@2x.png" width="150" /></h1>
-<a id="slideBtn" class="switcherOFF"></a>
+<a id="slideBtn" class="slideBtn switcherOFF"></a>
 </header>
-<ul id="countryList">
+<ul id="countryList" class="countryList">
 <li id="jp" class="current">JP</li>
 <li id="us">US</li>
 <li id="uk">UK</li>
@@ -119,7 +119,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </ul>
 <h2><span id="feedName">トップセールス</span>：<span id="categolyName"></span></h2>
 <!-- Recomend -->
-<div id="recomend">
+<div class="recomend">
 <a onMouseDown=”ga(‘send’, ‘event’, ‘banner’, ‘click’, ‘QRreader’);” href="https://itunes.apple.com/jp/app/qr-raeader/id788443692?mt=8&at=11l4Yj" target="_blank">
 <section>
 <img src="img/icon_qr.png" width="50" />
@@ -130,8 +130,8 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </a>
 </div>
 <!-- Recomend -->
-<div id="loading"></div>
-<div id="target"></div>
+<div id="loading" class="loading"></div>
+<div id="target" class="target"></div>
 <div class="qr"><p>AppRank[スマホ用]</p><img src="img/qr.png" width="150px"></div>
 </div>
 
